openshift-external-secrets-operator/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: openshift-external-secrets-operator
  annotations:
    argocd.argoproj.io/sync-wave: "0"
  labels:
    openshift.io/cluster-monitoring: "true"
