openshift-external-secrets-operator/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-aws-egress-for-main-controller
  namespace: external-secrets
  annotations:
    argocd.argoproj.io/sync-wave: "4"
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: external-secrets
  policyTypes:
    - Egress
  egress:
    - ports:
        - port: 443
          protocol: TCP
